--- a/track.yml
+++ b/track.yml
@@ -2,4 +2,7 @@
 track:
     title: Wearing Sandals with Mike
     uuid: 277bee8e-ceba-44b5-bc4a-1329308756ee
-    topics: []
+    topics:
+    -   title: Thongs
+    -   title: Berkstocks
+    -   title: Bottle Opener Accessories
